err/aufmachen.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aufmachen'...
Compiling './lib/python3.5/site-packages/aufmachen/BeautifulSoup.py'...
***   File "./lib/python3.5/site-packages/aufmachen/BeautifulSoup.py", line 448
    raise AttributeError, "'%s' object has no attribute '%s'" % (self.__class__.__name__, attr)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aufmachen/crawler.py'...
***   File "./lib/python3.5/site-packages/aufmachen/crawler.py", line 31
    print "Sleeping for %.1f seconds..." % secs
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/aufmachen/websites'...
Compiling './lib/python3.5/site-packages/aufmachen/websites/immoweb.py'...
***   File "./lib/python3.5/site-packages/aufmachen/websites/immoweb.py", line 77
    print "iGET", url
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/aufmachen-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
